--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/java,maven,intellij
+/GGMarketingTool.iml
